[b]Version 0.6.4[/b]:

(2008-10-16)
 * Moved the comboboxes for the video & audio drivers to the Video and Audio
   tabs.
 * Added a new section in the preferences dialog: Playlist.

(2008-10-15)
 * Added the possibility to add consecutive files (video_01.avi, 
   video_02.avi..) to the playlist. This feature is controlled by the option 
   add_to_playlist_consecutive_files (under the [gui] section).
 * Now the available tracks in DVDs, CDs and VCDs won't be automatically added
   to the playlist if the option gui/auto_add_to_playlist is false. Should fix 
   bug #2049998.

(2008-10-14)
 * Logout is not cancelled by smplayer. Fixes bug #2155555.
 * Now the options in preferences display a tooltip with a help message.
 * Revised and corrected some of the help messages in preferences.
 * Added 1:1 to the aspect ratio menu.

(2008-10-10)
 * Added a work-around for Traditional Chinese. The names of the arrow keys 
   were deleted from the shortcuts if using Qt 4.3.

(2008-10-09)
 * Now the video keeps paused when changing brightness, contrast, hue, 
   saturation and gamma.
 * Now the dialog to find subtitles can also download the subtitles (the
   zip file) and extract the subtitle file. This is exactly how it works:
   when you click on the download button, the zip file is downloaded to a
   temporary file. If the zip file contains only one subtitle, it's extracted, 
   trying to use the same name of the video. So if the video is named movie.avi
   and you downloaded a French subtitle, the subtitle is saved as movie_fr.srt.
   If there are more than one subtitle in the zip file, a dialog will appear 
   so the user can choose the subtitle(s) to extract. In that case, and in 
   order not to make things more complicated, the subtitles are just saved 
   with their original names.

(2008-10-06)
 * (Windows) Added a tool (dxlist) which can list the dsound audio devices
   and the ddraw display devices. Read the README.txt inside the dxlist