@@ -1,5 +1,9 @@
 [b]Version 0.6.4[/b]:
 
+(2008-10-19)
+ * (Experimental) Added the possibility to change the video track.
+   Only tested with this sample video: http://www.megaupload.com/?d=3GAGZCTP
+
 (2008-10-16)
  * Moved the comboboxes for the video & audio drivers to the Video and Audio
    tabs.
